# PrimeNet

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  OBSERVATION_SPECIFICATION.md  PrimeNet_Principles.md  README.md  manifest.json
Lab/: README.md  lab.py
Platform/: README.md
bootstrap/: README.md  create_configuration.py
catalog/: asset_registry.csv  asset_registry.json  asset_summary.json  database_summary.json  datasets.csv  instruments.csv  observations.csv  observatory_catalog.json  repository_inventory.csv  repository_inventory.json  repository_summary.json
config/: primenet.yaml  repository.production.yaml  repository.yaml  repository_build.yaml
core/: build_gap_events.py  build_gap_sequences.py  build_prime_events.py  build_prime_range.py  config.py  drive_gap_event_repository.py  drive_gap_repository.py  drive_prime_event_repository.py  drive_prime_repository.py  drive_prime_repository_100B.py  instrument.py  logger.py  mission.py  observatory.py  observatory_factory.py  optimize_gap_repository.py  paths.py  products.py  query_repository.py  query_window_test.py  registry.py  repository.py  (+7 more)
paper/PrimeNet_Paper_Builder_v4_alpha2/: CHANGELOG.md  README.md  TEST_RESULTS.txt  pyproject.toml
paper/PrimeNet_Paper_Builder_v4_alpha2/builder/cli/: arguments.py  commands.py
paper/PrimeNet_Paper_Builder_v4_alpha2/builder/core/: configuration.py  exceptions.py  manifest.py  pipeline.py  version.py
paper/PrimeNet_Paper_Builder_v4_alpha2/papers/architecture/: paper.json
paper/PrimeNet_Paper_Builder_v4_alpha2/tests/: test_configuration.py
(+403 files in other folders)
