[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "primenet-paper-builder"
version = "4.0.0a2"
description = "Evidence-driven publication framework for PrimeNet"
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "Jinhua Liao"}]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
primenet-paper = "builder.cli.build_paper:main"

# Explicit discovery prevents the data directories (papers, evidence, releases)
# from being mistaken for import packages in this flat project layout.
[tool.setuptools.packages.find]
where = ["."]
include = ["builder", "builder.*"]
exclude = ["tests", "tests.*", "papers", "papers.*", "evidence", "releases"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
